--- a/Images_environment_Map2seq.ipynb
+++ b/Images_environment_Map2seq.ipynb
@@ -198,7 +198,7 @@
       "source": [
         "from json.decoder import JSONDecodeError\n",
         "# Define API key and output directory\n",
-        "api_key = \"AIzaSyBduoc6qQqsPWgj_eS0tTSh1kzuAp6F8ow\"\n",
+        "api_key = \"Your_API_key\"\n",
         "\n",
         "# Path to your JSON file\n",
         "json_file = '/content/dev_visual_environment.json'\n",
